[package]
name = "graphcast-3la"
version = "0.0.1"
edition = "2021"

[dependencies]
graphcast_sdk = { package = "graphcast-sdk",  git = "https://github.com/graphops/graphcast-sdk", branch = "hope/error-type-strings" }
anyhow = "1.0"
axum = { version = "0.5", features = ["headers"] }
async-graphql = "4.0.16"
async-graphql-axum = "4.0.16"
autometrics = { version = "0.3.3", features = ["prometheus-exporter"] }
chrono = "0.4"
clap = { version = "3.2.25", features = ["derive", "env"] }
derive-getters = "0.2.1"
dotenv = "0.15"
ethers = "2.0.4"
ethers-contract = "2.0.4"
ethers-core = "2.0.4"
ethers-derive-eip712 = "1.0.2"
graphql_client = "0.9.0"
hex = "0.4.3"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
once_cell = "1.17"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
partial_application = "0.2.1"
prometheus = "0.13.3"
prost = "0.11"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.163", features = ["rc", "derive"] }
serde_derive = "1.0"
serde_json = "1.0.96"
sha3 = "0.10.8"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "json", "offline"] }
thiserror = "1.0.40"
tracing = "0.1"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }
tokio = { version = "1.28.1", features = ["full", "rt"] }
