[package]
name = "listener-radio"
version = "0.0.4"
edition = "2021"
authors = ["GraphOps (hopeyen)"]
description = "Listener Radio monitors on a Graphcast network and stores messages"
license = "Apache-2.0"
repository = "https://github.com/graphops/listener-radio"
keywords = ["graphprotocol", "data-integrity", "Indexer", "waku", "p2p"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
graphcast-sdk = "0.7.0"
anyhow = "1.0"
axum = { version = "0.5", features = ["headers"] }
async-graphql = "4.0.16"
async-graphql-axum = "4.0.16"
autometrics = { version = "0.3.3", features = ["prometheus-exporter"] }
clap = { version = "4.3.1", features = ["derive", "env"] }
derive-getters = "0.2.1"
dotenv = "0.15"
ethers = "2.0.4"
ethers-contract = "2.0.4"
ethers-core = "2.0.4"
ethers-derive-eip712 = "1.0.2"
metrics = "0.20.1"
once_cell = "1.17"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
prometheus = "0.13.3"
prost = "0.11"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.163", features = ["rc", "derive"] }
serde_derive = "1.0"
serde_json = "1.0.96"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "bigdecimal", "rust_decimal", "time", "migrate"] }
thiserror = "1.0.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }
tokio = { version = "1.28.1", features = ["full", "rt"] }
chrono = "0.4.33"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
